# ThunderInterfaces

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/instructions/: interfaces.instructions.md
.github/workflows/: Build ThunderInterfaces on Linux.yml  Build ThunderInterfaces on MacOS.yml  Build ThunderInterfaces on Windows.yml  Build ThunderInterfaces.yml  Linux build template.yml  MacOS build template.yml
comrpc/: CMakeLists.txt
definitions/: CMakeLists.txt  CompositionBuffer.h  Definitions.cpp  Definitions.vcxproj  Definitions.vcxproj.filters  Module.h  ValuePoint.h  definitions.h
example_interfaces/: CMakeLists.txt  ExampleIds.h  ExampleInterfaces.vcxproj  ExampleInterfaces.vcxproj.filters  ICustomErrorCode.h  ISimpleAsync.h  ISimpleCustomObjects.h  ISimpleInstanceObjects.h  Module.cpp  Module.h
examples/: CMakeLists.txt  Module.h  SampleIds.h
interfaces/: CMakeLists.txt  DRMHelper.h  IAVNClient.h  IAVSClient.h  IAccessControlList.h  IAirplay.h  IAmazonPrime.h  IAnalytics.h  IAppManager.h  IApplication.h  IAudioStream.h  IBluetooth.h  IBluetoothAudio.h  IBluetoothRemoteControl.h  IBrowser.h  IBrowserExt.h  IButler.h  ICapture.h  ICommand.h  IComposition.h  ICompositionBuffer.h  ICompositionExt.h  IConfiguration.h  IContentDecryption.h  IContentProtection.h  ICryptography.h  ICustomerCareOperations.h  IDHCPServer.h  IDIALServer.h  IDNSServer.h  IDRM.h  IDTV.h  IDeviceIdentification.h  IDeviceInfo.h  IDeviceInfo2.h  IDeviceInfoExt.h  IDictionary.h  IDisplayInfo.h  IDolby.h  IDsgccClient.h  (+106 more)
interfaces/doc/: FireboltContentProgressAPI.md
interfaces/json/: ExternalMetadata.h
jsonrpc/: AVInput.json  Airplay.json  BluetoothControl.json  BluetoothRemoteControl.json  Browser.json  Butler.json  CASPlayerCommon.json  Cobalt.json  Compositor.json  Containers.json  CookieJar.json  DHCPServer.json  DIALServer.json  DTV.json  DeviceIdentification.json  DeviceInfo.json  DisplayInfo.json  EssosSample.json  FirmwareControl.json  IOConnector.json  IOControl.json  InputSwitch.json  LISA.json  LocationSync.json  LogExport.json  MessageControl.json  Messenger.json  MigrationPreparer.json  Monitor.json  Netflix.json  NetworkControl.json  OCDM.json  Packager.json  PerformanceMonitor.json  PersistentStore.json  PlayerInfo.json  Power.json  Provisioning.json  RemoteControl.json  SecureShellServer.json  (+15 more)
qa_interfaces/: CMakeLists.txt  IBenchmark.h  IBenchmarkPayload.h  IBenchmarkPayloadCOMRPC.h  ITestAutomation.h  ITestChannelClosed.h  ITestController.h  ITestPlugin.h  ITestStateControl.h  ITestUtility.h  Module.h  QAIds.h  QAInterfaces.vcxproj  QAInterfaces.vcxproj.filters
qa_jsonrpc/: TestController.json  TestUtility.json
sample_interfaces/: CMakeLists.txt  ISimpleAsync.h  ISimpleCustomObjects.h  ISimpleInstanceObjects.h  Module.h  SampleIds.h
